--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -2,10 +2,10 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0;
   margin: 0;
-  color: rgb(255, 255, 255);
+  color: #9aacc6;
   font-size: 1rem;
   line-height: 1.5;
 }
 body {
-  background-color: rgb(19, 48, 62);
+  background-color: #021524 !important;
 }
