--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,8 +1,9 @@
 .nav {
+    margin-bottom: 1rem;
     padding: 0.2rem;
     display: flex;
     align-items: center;
-    background-color: rgba(39,49,58,255);
+    background-color: #0d2136;
 }
 .logoBox {
     margin-right: 0.9%;
@@ -26,6 +27,7 @@
 .ul {
     padding: 0.3rem;
     background-color: rgb(19, 48, 62);
+    border: 1px solid #0d2136;
     width: 10rem;
     display: flex;
     flex-direction: column;
@@ -35,6 +37,9 @@
     text-decoration: none;
 }
 .ul li {
+    
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
     padding: 0.3rem;
     transition:  background-color 0.7s 0.2s, border-radius 0.7s 0.2s;
 }
@@ -44,4 +49,64 @@
 }
 .ul2 {
     display: none;
+}
+.ul2 li {
+    
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
+    transition:  background-color 0.7s 0.2s, border-radius 0.7s 0.2s;
+
+}
+.ul2 li:hover {
+    border-radius: 5px;
+    background-color: rgb(255, 0, 136);
+}
+
+@media screen and (min-width: 600px) {
+    .ul2 {
+        margin-left: 1rem;
+        display: flex;
+    }
+    .ul2 li {
+        font-size: 1.6rem;
+        list-style-type: none;
+        margin-left: 2rem;
+    }
+    .brandNameBox {
+        margin-right: 1.4rem;
+    }
+    .menu {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .logoBox {
+        margin-left: 1rem;
+    }
+    .logoImage {
+        width: 3rem;
+        height: 3rem;
+    }
+    .brandName {
+        letter-spacing: 0.3rem;
+        font-weight: 800;
+    }
+    .brandNameBox {
+        margin-right: 14%;
+    }
+    .ul2 {
+        margin-left: 4rem;
+    }
+    .ul2 li {
+        padding: 0 1rem;
+        margin-left: 3rem;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .ul2 li {
+        margin-left: 6rem;
+    }
 }
