--- a/src/styles/ProjectCard.module.css
+++ b/src/styles/ProjectCard.module.css
@@ -1,19 +1,20 @@
 .card {
-    border: 0.1px solid  rgba(39,49,58,255);
-    width: 20rem;
+    width: 85%;
     margin: 1rem;
-    transition:  transform 0.6s 0.3s ;
+    transition:  border 0.6s 0.3s ;
 }
 .card:hover {
-    transform: scale(1.1);
+    border: 1px solid #fff;
 }
 .video {
     width: 100%;
     height: 13rem;
+    border-bottom: 0.2px solid #fff;
 }
 .info {
+    background-color: #26435a;
     padding: 0.5rem;
-    background-color: rgba(39,49,58,255);
+    height: auto;
 }
 .title {
     color: yellow;
@@ -22,21 +23,24 @@
     color: deeppink;
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 600px) {
     .card {
-       width: 15rem;
+        width: 15rem;
+        border: 0.1px solid #fff;
+        height: 30rem;
     }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1000px) {
+
     .card {
         border: 0.1px solid  rgba(39,49,58,255);
-        width: 20rem;
+        width: 18rem;
         margin: 1rem;
         transition:  transform 0.6s 0.3s ;
     }
     .card:hover {
-        transform: scale(1.1);
+        border: 1px solid #fff;
     }
     .video {
         width: 100%;
@@ -44,7 +48,8 @@
     }
     .info {
         padding: 0.5rem;
-        background-color: rgba(39,49,58,255);
+        background-color: #26435a;
+        height: 13rem;
     }
     .title {
         color: yellow;
