--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,64 +1,70 @@
 .parent {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-}
-.headerOne {
+    align-items: center;
+ }
+ .headerOne {
     display: flex;
     justify-content: center;
-    margin-bottom: 1rem;
-}
-.headerOne span {
+ }
+ .headerOne span {
+     font-size: 1.3rem;
+     color: aqua;
+     border-bottom: 1px solid #fff;
+ }
+ .introText {
+     margin-top: 0;
+     margin-bottom: 0;
+     padding: 0.6rem;
+ }
+ .headerTwo {
+     margin-top: 0;
+     margin-bottom: 0.4rem;
+     margin-left: 1rem;
+ }
+ .headerTwo span {
     color: aqua;
-    font-size: 2rem;
-    border-bottom: 1px solid #fff;
-}
+ }
+ .projectsBox {
+    background-color: rgb(19, 48, 62);
+    margin: 0.5rem;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: wrap;
+     margin-top: 0;
+     border-radius: 10px;
+ }
 
-.headerTwo {
-    margin-top: 3rem;
-    margin-left: 3rem;
-}
-.headerTwo span {
-    font-size: 1.5rem;
-    color: aqua;
-}
-.projectsBox {
-    margin: 0 2rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-@media screen and (min-width: 300px) {
-    .parent {
-       justify-content: center;
-       align-items: center;
-    }
-    .headerOne {
-        margin-bottom: 0rem;
-    }
-    .headerOne span {
-        font-size: 1.3rem;
-    }
+@media screen and (min-width: 600px) {
     .introText {
-        margin-top: 0;
-        margin-bottom: 0;
-        padding: 0.6rem;
-    }
-    .headerTwo {
-        margin-top: 0;
-        margin-bottom: 0.4rem;
-        margin-left: 0;
+        padding: 1rem;
     }
     .projectsBox {
-        border: 4px solid #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 0;
+        flex-direction: row;
+    }
+    .headerOne span {
+        font-size: 1.8rem;
+    }
+    .headerTwo span {
+        font-size: 1.3rem;
     }
 }
-@media screen and (min-width: 650px) {
-    .introText {
-        margin:  0 1rem;
+
+@media screen and (min-width: 1000px) {
+    .parent {
+        padding: 1rem;
+        margin: 0 5rem;
+        border: 0.1px solid #fff;
     }
+    .introText {
+        padding: 0 6rem;
+    }
+    .headerTwo {
+        margin-left: 5rem;
+    }
+    .projectsBox {
+        margin: 1rem 2rem;
+    } 
+        
 }
