--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -25,7 +25,7 @@
     color: aqua;
  }
  .projectsBox {
-    background-color: rgb(19, 48, 62);
+    border: 1px solid  #0d2136;
     margin: 0.5rem;
      display: flex;
      flex-direction: column;
