--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,113 +1,69 @@
-.nav {
-    margin-bottom: 1rem;
-    padding: 0.2rem;
+nav {
     display: flex;
     align-items: center;
-    background-color: #0d2136;
+    justify-content: space-between;
+    border: 1px solid  #0d2136;
+    margin: 0.2rem;margin-bottom: 1rem;
+    padding: 0.3rem 0.6rem;
 }
-.logoBox {
-    margin-right: 0.9%;
-    margin-left: 0.9%;
+.icon:hover {
+    cursor: pointer;
 }
-.logoImage {
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-    width: 2.5rem;
-    height: 2.5rem;
-    object-fit: cover;
-}
-.brandNameBox {
-    margin-right: 10%;
-}
-.brandName {
-    color: #fff;
-    font-size: 1.6rem;
-    font-weight: 700;
-    letter-spacing: 0.01rem;
-}
-.ul {
-    padding: 0.3rem;
-    background-color: rgb(19, 48, 62);
-    border: 1px solid #0d2136;
-    width: 10rem;
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-}
-.link {
-    text-decoration: none;
-}
-.ul li {
-    
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 500;
-    padding: 0.3rem;
-    transition:  background-color 0.7s 0.2s, border-radius 0.7s 0.2s;
-}
-.ul li:hover {
-    padding: 0 0.5rem;
-    border-radius: 5px;
-    background-color: rgb(255, 0, 136);
-}
-.ul2 {
+.horizontalUl {
     display: none;
 }
-.ul2 li {
-    padding: 0 0.5rem;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 500;
-    transition:  background-color 0.7s 0.2s, border-radius 0.7s 0.2s;
-
+.verticalUl  {
+    border: 1px solid  #0d2136;
+    display: flex;
+    flex-direction: column;
+    margin: 0.3rem;
+} 
+.verticalUl li {
+    list-style-type: none;
+    padding: 0.5rem;
+    margin: 0.3rem;
+    background-color: #0d2136;
 }
-.ul2 li:hover {
-    border-radius: 5px;
-    background-color: rgb(255, 0, 136);
+.verticalUl li:hover {
+    background-color: rgb(212, 97, 159);
 }
-
-@media screen and (min-width: 600px) {
-    .ul2 {
-        margin-left: 1rem;
+.brandNameBox span{
+    color: #fff;
+    letter-spacing: 0.1rem;
+    font-size: 1.9rem;
+    font-weight: 700;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+.link:hover {}
+.icon {
+    margin-right: 0.2rem;
+}
+@media screen and (min-width: 900px) {
+    .horizontalUl {
         display: flex;
-    }
-    .ul2 li {
-        font-size: 1.6rem;
         list-style-type: none;
-        margin-left: 2rem;
+        /* border: 1px solid deeppink; */
     }
-    .brandNameBox {
-        margin-right: 1.4rem;
-    }
-    .menu {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .logoBox {
+    .horizontalUl li {
+        margin-bottom: 0.3rem;
+        margin-top: 0.3rem;
+        margin-right: 0.9rem;
         margin-left: 1rem;
+        font-weight: 500;
+        border: 1px solid #0d2136;
+        padding: 0.3rem;
+        border-radius: 5px;
     }
-    .logoImage {
-        width: 3rem;
-        height: 3rem;
+    .horizontalUl li:hover {
+        background-color: rgb(212, 97, 159);
+        color: #fff;
     }
-    .brandName {
-        letter-spacing: 0.3rem;
-        font-weight: 800;
-    }
-    .brandNameBox {
-        margin-right: 14%;
-    }
-    .ul2 {
-        margin-left: 4rem;
-    }
-    .ul2 li {
-        padding: 0 1rem;
-        margin-left: 3rem;
-    }
-}
-
-
-@media screen and (min-width: 1200px) {
-    .ul2 li {
-        margin-left: 6rem;
+    .menuBox {
+        display: none;
     }
 }
