--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -7,7 +7,7 @@
 }
 .devInfo {
     border-radius: 10px;
-    background-color: #0d2136;
+    background-color: #1f3042;
     padding: 0.5rem;
     height: auto;
 }
@@ -68,7 +68,7 @@
 }
 .skillsCard {
     border-radius: 10px;
-    background-color: #0d2136;
+     background-color: #1f3042;
     padding: 0.5rem;
     margin-bottom: 1rem;
 }
@@ -78,7 +78,7 @@
     height: 15rem;
 }
 .convinceBox {
-    background-color: #0d2136;
+     background-color: #1f3042;
     border-radius: 10px;
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -106,7 +106,7 @@
 }
 .achievementsBox {
     border-radius: 10px;
-    background-color: #0d2136;
+  background-color: #1f3042;
     margin-bottom: 1rem;
     padding: 0.5rem;
 }
@@ -122,7 +122,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #0d2136;
+  background-color: #1f3042;
 }
 .fastContactBox span {
     border-bottom: 1px solid #fff;
