--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -3,7 +3,8 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: #1f3042;
-    margin: 0.2rem;margin-bottom: 1rem;
+    margin: 0.2rem;
+    margin-bottom: 0.5rem;
     padding: 0.3rem 0.6rem;
 }
 .icon:hover {
@@ -13,26 +14,42 @@ cursor: pointer;
     display: none;
 }
 .verticalUl  {
-    border: 1px solid #586c82;
+    list-style-type: none;
     display: flex;
     flex-direction: column;
     margin: 0.3rem;
+    padding: 0.3rem;
+    border: 1px solid rgb(11, 52, 95);
 } 
 .verticalUl li {
-    list-style-type: none;
-    padding: 0.5rem;
-    margin: 0.3rem;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    border: 1px solid rgb(11, 52, 95);
+    padding: 0.3rem;
+    margin-bottom: 0.3rem;
     /* background-color: #1f3042; */
 }
 .verticalUl li:hover {
-    background-color: rgb(212, 97, 159);
+    cursor: pointer;
 }
+.selectedItem {
+    /* border: 1px solid  #02487f; */
+    background-color: #02487f;
+}
+.brandNameBox {}
 .brandNameBox span{
     color: #fff;
     letter-spacing: 0.1rem;
     font-size: 1.9rem;
     font-weight: 700;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.menuBox {
+    display: flex;
+}
+.homeIcon {
+    margin-right: 0.5rem;
 }
 .link {
     display: flex;
@@ -60,7 +77,7 @@ cursor: pointer;
         border-radius: 5px;
     }
     .horizontalUl li:hover {
-        background-color: rgb(212, 97, 159);
+        border: 1px solid rgb(132, 174, 219);
         color: #fff;
     }
     .menuBox {
